fixing spacing

--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,7 @@ h1 {
 }
 
 footer {
+	margin: 0;
 	background-color: #00a9a7;
 	height: 4em;
 	padding: 0.75em;
@@ -196,6 +197,7 @@ footer {
 }
 
 .copyright {
+	margin: 0;
 	position: absolute;
 	color: #fff;
 }
@@ -247,7 +249,7 @@ footer {
 }
 
 .services {
-	height: 236vw;
+	height: calc(200vw + 6em);
 }
 
 .services h2 {
@@ -256,7 +258,7 @@ footer {
 
 @media only screen and (min-width: 25em) {
 .services {
-	height: calc(200vw + 8em);
+	height: calc(200vw + 6em);
 }
 }
 
@@ -307,7 +309,7 @@ footer {
 
 
 	.services {
-		height: calc(100vw + 7em);
+		height: calc(100vw + 6em);
 	}
 
 
@@ -341,7 +343,7 @@ footer {
 
 .gallery-lb {
 	width: 100%;
-	margin-top: 1em;
+	margin-top: 0;
 }
 
 .lightbox {
